--- a/release/cloudbuild_withsecure_signature.yaml
+++ b/release/cloudbuild_withsecure_signature.yaml
@@ -12,30 +12,30 @@
 #
 #### WithSecure Expectations ####
 #
-# WithSecure is expected to overwrite the _WITHSECURE_SIG_FILE and
-# _RELEASE_VERSION_FILE in the Github repo for each release. Cloud Build then
-# reads the _RELEASE_VERSION_FILE here, allowing it copy the signature to the
-# proper "subdir" (as mentioned above).
+# WithSecure is expected to commit a signature file in the _WITHSECURE_DIR dir
+# of the Github repo for each release, and tag it with the pattern
+# `withsecure_vX.X.X`.
 #
-# The last piece of config which must be coordinated with WithSecure is how
-# this config gets triggered (and is captured in the GCP project rather than
-# this file). This file will be configured to run when the repo is tagged with
-# `withsecure_signature`.
+# Cloud Build infers the name of the file from the tag name by appending the
+# `.sig` file suffix. The expected signature file name is
+# `withsecure_vX.X.X.sig`.
+#
+# After Cloud Build locates the signature file, it copies the file to the
+# proper "subdir" (as mentioned above).
 steps:
-  # Read the release version for which the WithSecure signature is. Cloud Build
-  # does not allow dynamically setting env vars, so writing to a file as a
-  # workaround:
-  # https://stackoverflow.com/questions/52337831/how-do-i-set-an-environment-or-substitution-variable-via-a-step-in-google-cloud.
-  - name: ubuntu
-    args: ['bash', '-c', 'cat ${_WITHSECURE_DIR}/${_RELEASE_VERSION_FILE} > _RELEASE_VERSION']
-  # Copy the WithSecure signature to the bucket.
+  # Get version number (expected to be in the `X.X.X` format) from the tag name
+  # by removing the `withsecure_v` prefix. The version number is used as the
+  # "subdir" under _TRUSTED_OS_BUCKET.
   - name: gcr.io/cloud-builders/gcloud
     entrypoint: sh
     args:
       - -c
-      - 'gcloud storage cp ${_WITHSECURE_DIR}/${_WITHSECURE_SIG_FILE} gs://${_TRUSTED_OS_BUCKET}/$(cat _RELEASE_VERSION)/trusted_os_withsecure.sig'
+      - >-
+        gcloud storage cp ${_WITHSECURE_DIR}/${_TEST_TAG_NAME}.sig
+        gs://${_TRUSTED_OS_BUCKET}/$(echo ${_TEST_TAG_NAME} | sed -e "s/^withsecure_v//")/trusted_os_withsecure.sig
 substitutions:
+  # TODO(jayhou): do not use CI bucket when we flip this trigger to prod.
   _TRUSTED_OS_BUCKET: trusted-os-artifacts-ci
   _WITHSECURE_DIR: release/withsecure
-  _WITHSECURE_SIG_FILE: trusted_os.sig
-  _RELEASE_VERSION_FILE: release_version.txt
+  # TODO(jayhou): remove this when we flip this trigger to prod.
+  _TEST_TAG_NAME: withsecure_v0.1.2
