--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,12 +5,20 @@ version: 2
 updates:
 - package-ecosystem: gomod
   directory: "/"
+  groups:
+    all-go-deps:
+      patterns:
+        - "*"
   schedule:
     interval: daily
   commit-message:
       prefix: ":seedling:"
 - package-ecosystem: "github-actions"
   directory: "/"
+  groups:
+    all-gha-deps:
+      patterns:
+        - "*"
   schedule:
       interval: "daily"
   commit-message:
