--- a/release/cloudbuild_withsecure_signature.yaml
+++ b/release/cloudbuild_withsecure_signature.yaml
@@ -52,17 +52,7 @@ steps:
       - call
       - sequence
       - --data
-      - >
-      {
-        "entriesDir": "${_ENTRIES_DIR}",
-        "origin": "${_ORIGIN}",
-        "bucket": "${_LOG_NAME}",
-        "kmsKeyName": "ft-log-ci",
-        "kmsKeyRing": "firmware-release-ci",
-        "kmsKeyVersion": 1,
-        "kmsKeyLocation": "global",
-        "noteKeyName": "transparency.dev-aw-ftlog-ci"
-      }
+      - '{"entriesDir": "${_ENTRIES_DIR}", "origin": "${_ORIGIN}", "bucket": "${_LOG_NAME}", "kmsKeyName": "ft-log-ci", "kmsKeyRing": "firmware-release-ci", "kmsKeyVersion": 1, "kmsKeyLocation": "global", "noteKeyName": "transparency.dev-aw-ftlog-ci"}'
   # Integrate log entry.
   # TODO(jayhou): switch the KMS args to prod.
   - name: gcr.io/cloud-builders/gcloud
@@ -71,16 +61,7 @@ steps:
       - call
       - integrate
       - --data
-      - >
-      {
-        "origin": "${_ORIGIN}",
-        "bucket": "${_LOG_NAME}",
-        "kmsKeyName": "ft-log-ci",
-        "kmsKeyRing": "firmware-release-ci",
-        "kmsKeyVersion": 1,
-        "kmsKeyLocation": "global",
-        "noteKeyName": "transparency.dev-aw-ftlog-ci"
-      }
+      - '{"origin": "${_ORIGIN}", "bucket": "${_LOG_NAME}", "kmsKeyName": "ft-log-ci", "kmsKeyRing": "firmware-release-ci", "kmsKeyVersion": 1, "kmsKeyLocation": "global", "noteKeyName": "transparency.dev-aw-ftlog-ci"}'
 substitutions:
   # TODO(jayhou): do not use CI bucket when we flip this trigger to prod.
   _FIRMWARE_BUCKET: armored-witness-firmware-ci
