--- a/.github/workflows/pr_build.yml
+++ b/.github/workflows/pr_build.yml
@@ -24,6 +24,7 @@ jobs:
       run: |
         wget -q https://github.com/usbarmory/tamago-go/releases/download/tamago-go${TAMAGO_VERSION}/tamago-go${TAMAGO_VERSION}.linux-amd64.tar.gz
         sudo tar -xf tamago-go${TAMAGO_VERSION}.linux-amd64.tar.gz -C /
+        sudo apt update
         sudo apt install binutils-arm-none-eabi protobuf-compiler signify-openbsd u-boot-tools
         go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.30
         echo "${HOME}/go/bin" >> $GITHUB_PATH
