--- a/release/cloudbuild_ci.yaml
+++ b/release/cloudbuild_ci.yaml
@@ -90,7 +90,7 @@ steps:
       - --release=ci
       - --artefact=os2
       - --note_file=output/trusted_os_manifest_transparency_dev
-      - --note_verifier=${_OS_PUBLIC_KEY1}
+      - --note_verifier=${_OS_PUBLIC_KEY2}
       - --output_file=output/trusted_os_manifest_both
   # Print the content of the signed manifest.
   - name: bash
@@ -133,3 +133,4 @@ substitutions:
   _LOG_PUBLIC_KEY: transparency.dev-aw-ftlog-ci+f5479c1e+AR6gW0mycDtL17iM2uvQUThJsoiuSRirstEj9a5AdCCu
   _APPLET_PUBLIC_KEY: transparency.dev-aw-applet-ci+3ff32e2c+AV1fgxtByjXuPjPfi0/7qTbEBlPGGCyxqr6ZlppoLOz3
   _OS_PUBLIC_KEY1: transparency.dev-aw-os1-ci+7a0eaef3+AcsqvmrcKIbs21H2Bm2fWb6oFWn/9MmLGNc6NLJty2eQ
+  _OS_PUBLIC_KEY2: transparency.dev-aw-os2-ci+af8e4114+AbBJk5MgxRB+68KhGojhUdSt1ts5GAdRIT1Eq9zEkgQh
