--- a/release/cloudbuild_withsecure_signature.yaml
+++ b/release/cloudbuild_withsecure_signature.yaml
@@ -52,7 +52,7 @@ steps:
       - call
       - sequence
       - --data
-      - '{"entriesDir": "${_ENTRIES_DIR}", "origin": "${_ORIGIN}", "bucket": "${_LOG_NAME}", "kmsKeyName": "ft-log-ci", "kmsKeyRing": "firmware-release-ci", "kmsKeyVersion": 1, "kmsKeyLocation": "global", "noteKeyName": "transparency.dev-aw-ftlog-ci"}'
+      - '{"entriesDir": "${_ENTRIES_DIR}", "origin": "${_ORIGIN}", "bucket": "${_LOG_NAME}", "kmsKeyName": "ft-log-ci", "kmsKeyRing": "firmware-release-ci", "kmsKeyVersion": ${_KEY_VERSION}, "kmsKeyLocation": "global", "noteKeyName": "transparency.dev-aw-ftlog-ci"}'
   # Integrate log entry.
   # TODO(jayhou): switch the KMS args to prod.
   - name: gcr.io/cloud-builders/gcloud
@@ -61,10 +61,10 @@ steps:
       - call
       - integrate
       - --data
-      - '{"origin": "${_ORIGIN}", "bucket": "${_LOG_NAME}", "kmsKeyName": "ft-log-ci", "kmsKeyRing": "firmware-release-ci", "kmsKeyVersion": 1, "kmsKeyLocation": "global", "noteKeyName": "transparency.dev-aw-ftlog-ci"}'
+      - '{"origin": "${_ORIGIN}", "bucket": "${_LOG_NAME}", "kmsKeyName": "ft-log-ci", "kmsKeyRing": "firmware-release-ci", "kmsKeyVersion": ${_KEY_VERSION}, "kmsKeyLocation": "global", "noteKeyName": "transparency.dev-aw-ftlog-ci"}'
 substitutions:
   # TODO(jayhou): do not use CI bucket when we flip this trigger to prod.
-  _FIRMWARE_BUCKET: armored-witness-firmware-ci
+  _FIRMWARE_BUCKET: armored-witness-firmware-ci-1
   _FIRMWARE_COMPONENT: trusted-os
   _WITHSECURE_DIR: release/withsecure
   # TODO(jayhou): remove this when we flip this trigger to prod.
@@ -72,6 +72,8 @@ substitutions:
   # Log-related.
   _ENTRIES_DIR: firmware-log-sequence
   # TODO(jayhou): switch to prod origin.
-  _ORIGIN: transparency.dev/armored-witness/firmware_transparency/ci/0
+  _ORIGIN: transparency.dev/armored-witness/firmware_transparency/ci/1
   # TODO(jayhou): do not use CI bucket when we flip this trigger to prod.
-  _LOG_NAME: armored-witness-firmware-log-ci
+  _LOG_NAME: armored-witness-firmware-log-ci-1
+  # This must correspond with the trailing number on the _FIRMWARE_BUCKET, _ORIGIN, _LOG_NAME values.
+  _KEY_VERSION: 1
