_KEY_VERSION should be a string

--- a/release/cloudbuild_ci.yaml
+++ b/release/cloudbuild_ci.yaml
@@ -129,7 +129,7 @@ substitutions:
   # Log-related.
   _ENTRIES_DIR: firmware-log-sequence
   # This must correspond with the trailing number on the _FIRMWARE_BUCKET, _ORIGIN, _LOG_NAME values.
-  _KEY_VERSION: 1
+  _KEY_VERSION: '1'
   _ORIGIN: transparency.dev/armored-witness/firmware_transparency/ci/1
   _LOG_NAME: armored-witness-firmware-log-ci-1
   _LOG_PUBLIC_KEY: transparency.dev-aw-ftlog-ci+f5479c1e+AR6gW0mycDtL17iM2uvQUThJsoiuSRirstEj9a5AdCCu
