--- a/release/cloudbuild_ci.yaml
+++ b/release/cloudbuild_ci.yaml
@@ -5,9 +5,9 @@ steps:
   # containing our tag in the share workspace which other steps can inspect.
   - name: bash
     script: |
-      date +'0.2.%s-incompatible' > /workspace/fake_tag
+      date +'0.0.%s-incompatible' > /workspace/fake_tag
       cat /workspace/fake_tag
-  ### Build the Trusted OS, create a detached signature for it, and upload both to GCS.
+  ### Build the Trusted OS and upload it to GCS.
   # Build an image containing the Trusted OS artifacts with the Dockerfile.
   # This step needs to be a bash script in order to substitute fake tag into a
   # build arg.
@@ -53,7 +53,7 @@ steps:
           gs://${_FIRMWARE_BUCKET}/$(sha256sum output/trusted_os.elf | cut -f1 -d" ")
   ### Construct log entry / Claimant Model statement.
   # Create the manifest.
-  # This step needs to be a bash script in order to substitute the fake take
+  # This step needs to be a bash script in order to substitute the fake tag
   # in the command args.
   - name: golang
     entrypoint: bash
