--- a/release/cloudbuild_presubmit.yaml
+++ b/release/cloudbuild_presubmit.yaml
@@ -60,7 +60,7 @@ steps:
     args:
       - -c
       - |
-        go run github.com/transparency-dev/armored-witness/cmd/manifest@${_ARMORED_WITNESS_REPO_VERSION} \
+        go run github.com/transparency-dev/armored-witness/cmd/manifest@main \
           create \
           --git_tag=$(cat /workspace/fake_tag) \
           --git_commit_fingerprint=${COMMIT_SHA} \
@@ -81,7 +81,6 @@ substitutions:
   # Build-related.
   _FIRMWARE_BUCKET: armored-witness-firmware-ci-1
   _TAMAGO_VERSION: '1.21.5'
-  _ARMORED_WITNESS_REPO_VERSION: e7141b6db638c3a2cb23e354cedd2d2980d0fb3a
   # This must correspond with the trailing number on the _FIRMWARE_BUCKET, _ORIGIN values.
   _KEY_VERSION: '1'
   _ORIGIN: transparency.dev/armored-witness/firmware_transparency/ci/1
